--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "openai-api": "^1.2.6",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/pdf-parse": "^1.1.1"
   }
 }
